syntax = "proto3";

package api;

service AccountService {
    rpc GetKeychain(KeychainRequest) returns (KeychainResponse);
    rpc GetID(IDRequest) returns (IDResponse);
}

message KeychainRequest {
    string encrypted_address = 1;
    int64 timestamp = 2;
    string signature_request = 3;
}

message KeychainResponse {
    string encrypted_wallet = 1;
    int64 timestamp = 2;
    string signature_response = 3;
}

message IDRequest {
    string encrypted_address = 1;
    int64 timestamp = 2;
    string signature_request = 3;
}

message IDResponse {
    string encrypted_aes_key = 1;
    string encrypted_keychain_address = 2;
    int64 timestamp = 3;
    string signature_response = 4;
}

